--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body>
-<img src="https://raw.githubusercontent.com/apr-sty/itinfobyte/gh-pages/Information%20Technology_PAAS.jpg" alt="IT Infobyte" width="1024" height="1024">
+   background-image: url('https://raw.githubusercontent.com/apr-sty/itinfobyte/gh-pages/Information%20Technology_PAAS.jpg');
 </body>
 </html>
