--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
+<head>
+<style>
+body {
+  background-image: url('https://raw.githubusercontent.com/apr-sty/itinfobyte/gh-pages/Information%20Technology_PAAS.jpg');
+}
+</style>
+</head>
 <body>
-   background-image: url('https://raw.githubusercontent.com/apr-sty/itinfobyte/gh-pages/Information%20Technology_PAAS.jpg');
 </body>
 </html>
