--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 <style>
 body {
-  background-image: url('https://raw.githubusercontent.com/apr-sty/itinfobyte/gh-pages/Information%20Technology_PAAS.jpg');
+  <iframe src="http://free.timeanddate.com/clock/i7mq1pns/n776/fn8/fs16/fc9ff/tc000/bas2/bat1/bacfff/pa8/tt0/tw1/td1/th1/ta1/tb4" frameborder="0" width="241" height="56"></iframe>
+
 }
 </style>
 </head>
