--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ hr {
  <div class="topleft">
     <p>ITINFOBYTE.COM</p>
     <a href="https://time.is" id="time_is_link" rel="nofollow" style="font-size:36px">Time in Dubai:</a>
-<span id="Dubai_z414" style="font-size:36px"></span>
+<span id="IST_z414" style="font-size:36px"></span>
 <script src="//widget.time.is/en.js"></script>
 <script>
 time_is_widget.init({IST_z414:{template:"TIME<br>DATE<br>SUN", date_format:"dayname, monthname dnum, year, week", sun_format:"Sunrise: srhour:srminute Sunset: sshour:ssminute<br>Day length: dlhoursh dlminutesm", coords:"25.2581700,55.3047200"}});
