--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@ hr {
 <body>
 
  <div class="topleft">
-    <p>ITINFOBYTE.COM</p>
+    <p>ITINFOBYTE</p>
   </div>
   <div class="middle">
     <h1>COMING SOON</h1>
     <hr>
-    <p>35 days left</p>
+    <p>shortly</p>
   </div>
   <div class="bottomleft">
-    <p>ITINFOBYTE.COM</p>
+    <p>ITINFOBYTE</p>
   </div>
 </div>
 
