--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@ hr {
     <h1>COMING SOON</h1>
     <hr>
     <p>shortly</p>
+    <p>Date/Time: <span id="datetime"></span></p>
+    <script>
+    var dt = new Date();
+     document.getElementById("datetime").innerHTML = dt.toLocaleString();
+    </script>
   </div>
   <div class="bottomleft">
     <p>ITINFOBYTE</p>
