--- a/index.html
+++ b/index.html
@@ -54,10 +54,12 @@ hr {
     <script>
     var dt = new Date();
      document.getElementById("datetime").innerHTML = dt.toLocaleString();
+	 
     </script>
     </div>
   <div class="bottomleft">
-    <p>ITINFOBYTE</p>
+    <p><a href="https://www.freecounterstat.com" title="free hit counter code"><img src="https://counter2.stat.ovh/private/freecounterstat.php?c=5t7xm8ttrypen7fy19tuy6nxbl5sbnul" border="0" title="free hit counter code" alt="free hit counter code"></a>
+</p>
   </div>
 </div>
 
