--- a/index.html
+++ b/index.html
@@ -55,6 +55,15 @@ hr {
     var dt = new Date();
      document.getElementById("datetime").innerHTML = dt.toLocaleString();
 	 
+	    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WCNJ241Z73"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-WCNJ241Z73');
+</script>
     </script>
     </div>
   <div class="bottomleft">
