--- a/index.html
+++ b/index.html
@@ -65,6 +65,13 @@ hr {
   gtag('config', 'G-WCNJ241Z73');
 </script>
     </script>
+<script type="application/javascript">
+  function getIP(json) {
+    document.write("My public IP address is: ", json.ip);
+  }
+</script>
+
+<script type="application/javascript" src="https://api.ipify.org?format=jsonp&callback=getIP"></script>
     </div>
   <div class="bottomleft">
     <p><a href="https://www.freecounterstat.com" title="free hit counter code"><img src="https://counter2.stat.ovh/private/freecounterstat.php?c=5t7xm8ttrypen7fy19tuy6nxbl5sbnul" border="0" title="free hit counter code" alt="free hit counter code"></a>
