--- a/index.html
+++ b/index.html
@@ -1,82 +1,41 @@
 <!DOCTYPE html>
 <html>
-<style>
-body, html {
-  height: 100%;
-  margin: 0;
-}
-
-.bgimg {
-  background-image: url('/w3images/forestbridge.jpg');
-  height: 100%;
-  background-position: center;
-  background-size: cover;
-  position: relative;
-  color: white;
-  font-family: "Courier New", Courier, monospace;
-  font-size: 25px;
-}
-
-.topleft {
-  position: absolute;
-  top: 0;
-  left: 16px;
-}
-
-.bottomleft {
-  position: absolute;
-  bottom: 0;
-  left: 16px;
-}
-
-.middle {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
-
-hr {
-  margin: auto;
-  width: 40%;
-}
-</style>
+<head>
+  <meta charset="utf-8">
+  <title>Displaying Images</title>
+</head>
 <body>
-
- <div class="topleft">
-    <p>ITINFOBYTE</p>
-  </div>
-  <div class="middle">
-    <h1>COMING SOON</h1>
-    <hr>
-   <script>
-    var dt = new Date();
-     document.getElementById("datetime").innerHTML = dt.toLocaleString();
-	 
-	    <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-WCNJ241Z73"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-WCNJ241Z73');
-</script>
-    </script>
-<script type="application/javascript">
-  function getIP(json) {
-    document.write("My public IP address is: ", json.ip);
-  }
-</script>
-
-<script type="application/javascript" src="https://api.ipify.org?format=jsonp&callback=getIP"></script>
-    </div>
-  <div class="bottomleft">
-    <p><a href="https://www.freecounterstat.com" title="free hit counter code"><img src="https://counter2.stat.ovh/private/freecounterstat.php?c=5t7xm8ttrypen7fy19tuy6nxbl5sbnul" border="0" title="free hit counter code" alt="free hit counter code"></a>
+<h1>
+  Don't be afraid to be &lt;then a 100% success:
+</h1>
+<p>
+  
+  &quot;It is not the critic who counts; not the
+  man who points out how the strong man stumbles,
+  or where the doer of deeds could have done them
+  better. The credit belongs to the man who is
+  actually in the arena, whose face is marred by
+  dust and sweat and blood; who strives valiantly;
+  who errs, who comes short again and again,
+  because there is no effort without error and
+  shortcoming; but who does actually strive to do
+  the deeds; who knows great enthusiasms, the great
+  devotions; who spends himself in a worthy cause;
+  who at the best knows in the end the triumph of
+  high achievement, and who at the worst, if he
+  fails, at least fails while daring greatly, so
+  that his place shall never be with those cold and
+  timid souls who neither know victory nor
+  defeat.&quot;
 </p>
-  </div>
-</div>
-
+<p>
+<!-- 
+<img 
+src="http://lorempixel.com/output/nature-q-c-640-480-1.jpg" 
+width="640"
+height="480"> 
+-->
+</p>
+<p>Theodore Roosevelt 1910 &copy; Copyright</p>
 </body>
 </html>
