--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8">
   <title>IT INFO BYTE</title>
 </head>
-<body>
+<body><div id="main_body"><center>
 <p>  
   &quot;Don't take rest after your first victory because if you fail in second, more lips are waiting to say that your first victory was just luck.&quot;
 </p>
-<p>Dr. APJ Abdul Kalam</p>
+  <p>Dr. APJ Abdul Kalam</p></center></div>
 </body>
 </html>
