--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <title>IT INFO BYTE</title>
 </head>
 <body><div id="main_body"><center>
-<p>  
-  &quot;Don't take rest after your first victory because if you fail in second, more lips are waiting to say that your first victory was just luck.&quot;
+<p>
+  &quot;Don't take rest after your first victory because if you fail in second, more lips are waiting to say that your first victory was just luck.&quot;<br>
 </p>
   <p>Dr. APJ Abdul Kalam</p></center></div>
 </body>
