--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <p>
   &quot;Don't take rest after your first victory because if you fail in second, more lips are waiting to say that your first victory was just luck.&quot;<br>
 </p>
-  <p>Dr. APJ Abdul Kalam</p></center></div>
+  <p>Dr. APJ Abdul Kalamvar d = new Date();
+ var tz = d.toString().split("GMT")[1];</p></center></div>
 </body>
 </html>
