--- a/index.html
+++ b/index.html
@@ -8,14 +8,6 @@
 <p>
   &quot;Don't take rest after your first victory because if you fail in second, more lips are waiting to say that your first victory was just luck.&quot;<br>
 </p>
-  <p>Dr. APJ Abdul Kalam</p></center>
-  <p>Date/Time: <span id="datetime"></span></p>
-
-<script>
-var dt = new Date();
-document.getElementById("datetime").innerHTML = dt.toLocaleString();
-</script>
-  
-  </div>
+  <p>Dr. APJ Abdul Kalam</p></center></div>
 </body>
 </html>
